--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "style-loader": "^3.3.4"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
+    "electron-squirrel-startup": "^1.0.1",
+    "node-fetch": "^2.7.0"
   }
 }
